--- a/front/package.json
+++ b/front/package.json
@@ -1,89 +1,58 @@
 {
-  "name": "du-fait-maison",
+  "name": "front-new",
   "version": "0.0.0",
   "scripts": {
-    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
-    "dev": "ng serve --poll 500 --host 0.0.0.0 --watch --configuration=development",
-    "build": "ng build --prod --output-hashing none --aot --build-optimizer --vendor-chunk --common-chunk --base-href / --deploy-url /",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "dev": "ng serve --watch --configuration development",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/schematics": "^1.0.0",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/localize": "^14.2.12",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@asymmetrik/ngx-leaflet": "^14.0.1",
-    "@fortawesome/angular-fontawesome": "^0.10.2",
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
-    "@ng-select/ng-select": "^9.1.0",
+    "@angular/animations": "^18.1.0",
+    "@angular/cdk": "^18.1.1",
+    "@angular/common": "^18.1.0",
+    "@angular/compiler": "^18.1.0",
+    "@angular/core": "^18.1.0",
+    "@angular/forms": "^18.1.0",
+    "@angular/material": "^18.1.1",
+    "@angular/platform-browser": "^18.1.0",
+    "@angular/platform-browser-dynamic": "^18.1.0",
+    "@angular/router": "^18.1.0",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@ng-select/ng-select": "^13.4.1",
     "@swimlane/ngx-datatable": "^20.1.0",
-    "@types/chart.js": "^2.9.37",
-    "@types/geojson": "^7946.0.10",
+    "@types/chart.js": "^2.9.41",
+    "@types/geojson": "^7946.0.14",
     "@types/gsap": "^3.0.0",
-    "angular-bootstrap-md": "^14.0.0",
     "angular-file-upload": "^2.6.1",
-    "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.10.5",
-    "chart.js": "^2.5.0",
-    "enhanced-resolve": "^5.17.0",
-    "eslint": "^8.47.0",
-    "firebase": "^8.1.2",
-    "font-awesome": "^4.7.0",
-    "gsap": "^3.12.2",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.7.0",
-    "leaflet": "^1.9.4",
-    "mdb-angular-ui-kit": "^3.0.1",
-    "moment": "^2.29.4",
-    "ngx-gallery-14": "^14.0.1",
-    "ngx-skeleton-loader": "^6.0.0",
-    "popper.js": "^1.16.1",
-    "primeflex": "3.2.0",
-    "primeicons": "^6.0.1",
-    "primeng": "^14.0.0",
-    "rxjs": "^7.8.0",
-    "swiper": "^10.1.0",
+    "bootstrap": "^5.3.3",
+    "ngx-skeleton-loader": "^9.0.0",
+    "primeng": "^17.18.5",
+    "rxjs": "~7.8.0",
+    "swiper": "^11.1.5",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@types/bootstrap": "^5.0.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.5",
-    "@types/leaflet": "^1.9.3",
-    "@types/node": "^12.11.1",
-    "@types/q": "^1.5.5",
-    "codelyzer": "^0.0.28",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "^7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.6.4"
+    "@angular-devkit/build-angular": "^18.1.0",
+    "@angular/cli": "^18.1.0",
+    "@angular/compiler-cli": "^18.1.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.5.2"
   }
 }
